Add method insert in class Buffer and test